# cookiecutter-ml-project

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  mkdocs.yaml  pyproject.toml
{{ cookiecutter.repo_name }}/: .coveragerc  .dockerignore  .editorconfig  .env.template  .gitattributes  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .secrets  .tool-versions  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.include  README.md  SECURITY.md  mkdocs.yaml  pyproject.toml  setup.py
{{ cookiecutter.repo_name }}/.github/workflows/: pre-commit-checks.yaml
{{ cookiecutter.repo_name }}/charts/: values.yaml
{{ cookiecutter.repo_name }}/dockerfiles/: Dockerfile  entrypoint.sh
{{ cookiecutter.repo_name }}/docs/: security.md
{{ cookiecutter.repo_name }}/docs/adr/: 0001-record-architecture-decisions.md  index.md
{{ cookiecutter.repo_name }}/kustomize/overlays/dev/: kustomization.yaml
{{ cookiecutter.repo_name }}/kustomize/overlays/prod/: kustomization.yaml
{{ cookiecutter.repo_name }}/models/: README.md
{{ cookiecutter.repo_name }}/notebooks/: .gitignore  README.md
{{ cookiecutter.repo_name }}/requirements/: base.txt  dev.txt  requirements-test.txt  test.txt
{{ cookiecutter.repo_name }}/scripts/: README.md  shellcheck.sh
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  cli.py  config.py  server.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.project_slug }}/db/: models.py  (+1 more)
{{ cookiecutter.repo_name }}/tests/: __init__.py  conftest.py
{{ cookiecutter.repo_name }}/tests/load/: locusfile.py
(+12 files in other folders)
